--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
 			<a href="Page4.Temoignages.html">Temoignages</a>
 			<a href="Page5.NousContacter.html">Nous Contacter</a>
 			<a href="Page6.SeConnecter.html">Se Connecter</a>
+			<p>BITE</p>
 		</div>
 
 		<!-- Footer -->
