Ajout des autres pages du site

--- a/Page3.Partenaires.html
+++ b/Page3.Partenaires.html
@@ -5,7 +5,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>JobsNow - Accueil</title>
+	<title>JobsNow - Partenaires</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 			<a href="FacebookUrl"></a>
 			<a href="LinkedinUrl"></a>
 			<a href="Page5.NousContacter">Nous Contacter</a>
-			<a href="Page6.MentionsLegales.html">MentionsLegales</a>
+			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
 		</footer>
 
 </body>
