--- a/Page7.MentionsLegales.html
+++ b/Page7.MentionsLegales.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JobsNow - Mentions légales</title>
+	<link rel="stylesheet" href="JobsNow.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 	<!-- Contenu du site -->
 
 		<!-- Barre de navigation -->
-		<div id="topnav">
+		<div class="topnav">
 			<a href="Page1.JobsNow.html">JobsNow</a>
 			<a href="Page2.Annonces.html">Annonces</a>
 			<a href="Page3.Partenaires.html">Partenaires</a>
