--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -27,6 +27,12 @@
 			<a href="Page6.SeConnecter.html">Se Connecter</a>
 		</div>
 
+		<!-- Photo équipe -->
+
+		<figure id="photoEquipe">
+			<img src="photoEquipe.png" alt="Equipe">
+		</figure>
+
 		<!-- Footer -->
 		<footer>
 			<a href="FacebookUrl"></a>
