--- a/Page4.Temoignages.html
+++ b/Page4.Temoignages.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8">
 	<title>JobsNow - Temoignages</title>
 	<link rel="stylesheet" href="JobsNow.css">
+	<link rel="icon" type="image/png" href="logoYncrea.png"/>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 			<a href="Page3.Partenaires.html">Partenaires</a>
 			<a href="Page4.Temoignages.html">Temoignages</a>
 			<a href="Page5.NousContacter.html">Nous Contacter</a>
-			<a href="Page6.SeConnecter.html">Se Connecter</a>
+			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</div>
 
 		<!-- Footer -->
