--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8">
 	<title>JobsNow - Accueil</title>
 	<link rel="stylesheet" href="JobsNow.css">
+	<link rel="icon" type="image/png" href="logoYncrea.png"/>
 </head>
 
 <body>
@@ -24,14 +25,13 @@
 			<a href="Page3.Partenaires.html">Partenaires</a>
 			<a href="Page4.Temoignages.html">Temoignages</a>
 			<a href="Page5.NousContacter.html">Nous Contacter</a>
-			<a href="Page6.SeConnecter.html">Se Connecter</a>
+			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</div>
 
 		<!-- Photo équipe -->
 
-		<figure id="photoEquipe">
-			<img src="photoEquipe.png" alt="Equipe">
-		</figure>
+		<img src="photoEquipe.jpg" id="photoEquipe" alt="Equipe">
+
 
 		<!-- Footer -->
 		<footer>
