--- a/Page2.Annonces.html
+++ b/Page2.Annonces.html
@@ -19,14 +19,14 @@
 	<!-- Contenu du site -->
 
 		<!-- Barre de navigation -->
-		<div class="topnav">
+		<header>
 			<a href="Page1.JobsNow.html">JobsNow</a>
 			<a href="Page2.Annonces.html">Annonces</a>
 			<a href="Page3.Partenaires.html">Partenaires</a>
 			<a href="Page4.Temoignages.html">Temoignages</a>
 			<a href="Page5.NousContacter.html">Nous Contacter</a>
 			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
-		</div>
+		</header>
 
 		<!-- Footer -->
 		<footer>
