--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -28,25 +28,39 @@
 			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</header>
 
-		<!-- Photo équipe -->
-		<img src="photoEquipe.jpg" id="photoEquipe" alt="Equipe">
+		<!-- Photo équipe JN -->
+		<img src="photoEquipe.jpg" id="photoJN" alt="Equipe">
 
 		<!-- Paragraphe de présentation -->
-		<div id="divPresentationEquipe">
-			<h1>Présentation de l'équipe</h1>
+		<div id="divPresentationJN">
+			<h1>Présentation de Jobs Now</h1>
 			<p>
 				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
 				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
 				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
 			</p>
+			<a href="">Telechargement de la plaquette</a>
+		</div>
+
+		<div id="divEquipe">
+			<h1>L'équipe</h1>
+			<div class="membreEquipe">
+				<img src="logoMembre.png" class="logoMembre" alt="Membre">
+			</div>
+			<div class="membreEquipe">
+				<img src="logoMembre.png" class="logoMembre" alt="Membre">
+			</div>
+			<div class="membreEquipe">
+				<img src="logoMembre.png" class="logoMembre" alt="Membre">
+			</div>
 		</div>
 
 		<!-- Footer -->
 		<footer>
-			<a href="FacebookUrl"></a>
-			<a href="LinkedinUrl"></a>
+			<a href="FacebookUrl">Facebook</a>
+			<a href="LinkedinUrl">Linkedin</a>
 			<a href="Page5.NousContacter">Nous Contacter</a>
-			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
+			<a href="Page7.MentionsLegales.html">Mentions légales</a>
 		</footer>
 
 </body>
