--- a/Page2.Annonces.html
+++ b/Page2.Annonces.html
@@ -30,8 +30,8 @@
 
 		<!-- Footer -->
 		<footer>
-			<a href="FacebookUrl"></a>
-			<a href="LinkedinUrl"></a>
+			<a href="FacebookUrl">Facebook</a>
+			<a href="LinkedinUrl">Linkedin</a>
 			<a href="Page5.NousContacter">Nous Contacter</a>
 			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
 		</footer>
