Modifications de toutes les pages
Premier ajout du contenu de chaque page
- Images
- Textes
- Formulaires

--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -29,29 +29,49 @@
 		</header>
 
 		<!-- Photo équipe JN -->
-		<img src="photoEquipe.jpg" id="photoJN" alt="Equipe">
+		<div id="divPhotoJN">
+			<img src="photoEquipe.jpg" id="photoJN" alt="Equipe">
+		</div>
 
-		<!-- Paragraphe de présentation -->
+		<!-- Présentation de Jobs Now -->
 		<div id="divPresentationJN">
 			<h1>Présentation de Jobs Now</h1>
 			<p>
-				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
 				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
 				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
 			</p>
 			<a href="">Telechargement de la plaquette</a>
 		</div>
 
+		<!-- Présentation de l'équipe -->
+
 		<div id="divEquipe">
-			<h1>L'équipe</h1>
-			<div class="membreEquipe">
-				<img src="logoMembre.png" class="logoMembre" alt="Membre">
-			</div>
-			<div class="membreEquipe">
-				<img src="logoMembre.png" class="logoMembre" alt="Membre">
-			</div>
-			<div class="membreEquipe">
-				<img src="logoMembre.png" class="logoMembre" alt="Membre">
+		<h1>L'équipe</h1>
+			<div id="membresEquipe">
+				<div class="membreEquipe">
+					<img src="logoMembre.png" class="logoMembre" alt="Membre">
+					<p>Membre</p>
+				</div>
+				<div class="membreEquipe">
+					<img src="logoMembre.png" class="logoMembre" alt="Membre">
+					<p>Membre</p>
+				</div>
+				<div class="membreEquipe">
+					<img src="logoMembre.png" class="logoMembre" alt="Membre">
+					<p>Membre</p>
+				</div>
+				<div class="membreEquipe">
+					<img src="logoMembre.png" class="logoMembre" alt="Membre">
+					<p>Membre</p>
+				</div>
+				<div class="membreEquipe">
+					<img src="logoMembre.png" class="logoMembre" alt="Membre">
+					<p>Membre</p>
+				</div>
+				<div class="membreEquipe">
+					<img src="logoMembre.png" class="logoMembre" alt="Membre">
+					<p>Membre</p>
+				</div>
 			</div>
 		</div>
 
