--- a/Page2.Annonces.html
+++ b/Page2.Annonces.html
@@ -28,12 +28,49 @@
 			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</header>
 
+		<!-- Annonces -->
+		<div id="divAnnonces">
+			<h1>Nos annonces</h1>
+			<div class="divAnnonce">
+				<h3>Annonce</h3>
+				<p>Date</p>
+				<p>Lieu</p>
+				<p>Tenue</p>
+				<p>Remuneration<p>
+				<p>Description<p>	
+			</div>
+			<div class="divAnnonce">
+				<h3>Annonce</h3>
+				<p>Date</p>
+				<p>Lieu</p>
+				<p>Tenue</p>
+				<p>Remuneration<p>
+				<p>Description<p>	
+			</div>
+			<div class="divAnnonce">
+				<h3>Annonce</h3>
+				<p>Date</p>
+				<p>Lieu</p>
+				<p>Tenue</p>
+				<p>Remuneration<p>
+				<p>Description<p>	
+			</div>
+			<div class="divAnnonce">
+				<h3>Annonce</h3>
+				<p>Date</p>
+				<p>Lieu</p>
+				<p>Tenue</p>
+				<p>Remuneration<p>
+				<p>Description<p>	
+			</div>
+		</div>
+
 		<!-- Footer -->
 		<footer>
 			<a href="FacebookUrl">Facebook</a>
 			<a href="LinkedinUrl">Linkedin</a>
 			<a href="Page5.NousContacter">Nous Contacter</a>
-			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
+			<a href="Page7.MentionsLegales.html">Mentions légales</a>
 		</footer>
 
 </body>
