--- a/Page3.Partenaires.html
+++ b/Page3.Partenaires.html
@@ -28,6 +28,47 @@
 			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</header>
 
+		<!-- Partenaires -->
+		<div id="divPartenaires">
+			<h1>Nos partenaires</h1>
+			<div class="divPartenaire">
+				<div class="logoPartenaire">
+					<p>logo<p>
+				</div>
+				<div class="descriptionPartenaire">
+					<h3>Partenaire</h3>
+					<p>Description partenaire</p>
+				</div>
+			</div>
+			<div class="divPartenaire">
+				<div class="logoPartenaire">
+					<p>logo<p>
+				</div>
+				<div class="descriptionPartenaire">
+					<h3>Partenaire</h3>
+					<p>Description partenaire</p>
+				</div>
+			</div>
+			<div class="divPartenaire">
+				<div class="logoPartenaire">
+					<p>logo<p>
+				</div>
+				<div class="descriptionPartenaire">
+					<h3>Partenaire</h3>
+					<p>Description partenaire</p>
+				</div>
+			</div>
+			<div class="divPartenaire">
+				<div class="logoPartenaire">
+					<p>logo<p>
+				</div>
+				<div class="descriptionPartenaire">
+					<h3>Partenaire</h3>
+					<p>Description partenaire</p>
+				</div>
+			</div>
+		</div>
+
 		<!-- Footer -->
 		<footer>
 			<a href="FacebookUrl">Facebook</a>
