--- a/Page4.Temoignages.html
+++ b/Page4.Temoignages.html
@@ -28,12 +28,54 @@
 			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</header>
 
+		<!-- Temoignages -->
+		<div id="divTemoignages">
+			<h1>Témoignages</h1>
+			<div class="divTemoignage">
+				<div class="photoTemoin">
+					<p>temoin<p>
+				</div>
+				<div class="texteTemoignage">
+					<p>Texte du témoignage</p>
+					<p>Témoin, classe</p>
+				</div>
+			</div>
+			<div class="divTemoignage">
+				<div class="photoTemoin">
+					<p>temoin<p>
+				</div>
+				<div class="texteTemoignage">
+					<p>Texte du témoignage</p>
+					<p>Témoin, classe</p>
+				</div>
+			</div>
+			<div class="divTemoignage">
+				<div class="photoTemoin">
+					<p>temoin<p>
+				</div>
+				<div class="texteTemoignage">
+					<p>Texte du témoignage</p>
+					<p>Témoin, classe</p>
+				</div>
+			</div>
+			<div class="divTemoignage">
+				<div class="photoTemoin">
+					<p>temoin<p>
+				</div>
+				<div class="texteTemoignage">
+					<p>Texte du témoignage</p>
+					<p>Témoin, classe</p>
+				</div>
+			</div>
+		</div>
+
+
 		<!-- Footer -->
 		<footer>
 			<a href="FacebookUrl">Facebook</a>
 			<a href="LinkedinUrl">Linkedin</a>
 			<a href="Page5.NousContacter">Nous Contacter</a>
-			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
+			<a href="Page7.MentionsLegales.html">Mentions légales</a>
 		</footer>
 
 </body>
