--- a/Page5.NousContacter.html
+++ b/Page5.NousContacter.html
@@ -28,12 +28,25 @@
 			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</header>
 
+		<!-- Formulaire de contact -->
+		<div id="divContact">
+			<h1>Nous contacter</h1>
+			<form>
+				<input type="text" name="nom" value="Nom" class="input"><br>
+				<input type="text" name="prenom" value="Prénom" class="input"><br>
+				<input type="text" name="email" value="Email" class="input"><br>
+				<input type="text" name="statut" value="Statut (étudiant, professionnel, autre...)" class="input"><br>
+				<input type="text" name="message" value="Votre message ..." class="input"><br>
+				<input type="submit" name="envoyer" value="Envoyer" class="input">
+			</form>
+		</div>
+
 		<!-- Footer -->
 		<footer>
 			<a href="FacebookUrl">Facebook</a>
 			<a href="LinkedinUrl">Linkedin</a>
 			<a href="Page5.NousContacter">Nous Contacter</a>
-			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
+			<a href="Page7.MentionsLegales.html">Mentions légales</a>
 		</footer>
 
 </body>
