--- a/Page6.SeConnecter.html
+++ b/Page6.SeConnecter.html
@@ -28,12 +28,37 @@
 			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
 		</header>
 
+		<!-- Se connecter -->
+		<div id="divConnexion">
+			<h1>Se connecter</h1>
+			<form class="formulaireCompte">
+				<input type="text" name="email" value="Email" class="input">
+				<input type="text" name="mdp" value="Mot de passe" class="input">
+				<input type="submit" name="connexion" value="Se connecter" class="input">
+			</form>
+		</div>
+
+
+		<!-- S'inscrire -->
+		<div id="divInscription">
+			<h1>S'inscrire</h1>
+			<form class="formulaireCompte">
+				<input type="text" name="nom" value="Nom" class="input">
+				<input type="text" name="prenom" value="Prénom" class="input">
+				<input type="text" name="email" value="Email Yncréa" class="input">
+				<input type="text" name="naissance" value="Date de naissance" class="input">
+				<input type="text" name="adresse" value="Adresse" class="input">
+				<input type="text" name="telephone" value="Numéro de téléphone" class="input">
+				<input type="submit" name="inscription" value="S'inscrire" class="input">
+			</form>
+		</div>
+
 		<!-- Footer -->
 		<footer>
 			<a href="FacebookUrl">Facebook</a>
-			<a href="LinkedinUrl">Linkedin</a>
+			<a href="LinkedinUrl">Linkedins</a>
 			<a href="Page5.NousContacter">Nous Contacter</a>
-			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
+			<a href="Page7.MentionsLegales.html">Mentions légales</a>
 		</footer>
 
 </body>
