--- a/Page7.MentionsLegales.html
+++ b/Page7.MentionsLegales.html
@@ -20,7 +20,12 @@
 
 		<!-- Barre de navigation -->
 		<header>
-			<a href="Page1.JobsNow.html">JobsNow</a>
+			<a href="Page1.JobsNow.html">
+				<img src="logoYncrea.png" id="logoJobsNow" alt="Jobs Now">
+			</a>
+			<a href="Page1.JobsNow.html">
+				JobsNow
+			</a>
 			<a href="Page2.Annonces.html">Annonces</a>
 			<a href="Page3.Partenaires.html">Partenaires</a>
 			<a href="Page4.Temoignages.html">Temoignages</a>
