--- a/Page7.MentionsLegales.html
+++ b/Page7.MentionsLegales.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<title>JobsNow - Mentions légales</title>
 	<link rel="stylesheet" href="JobsNow.css">
-	<link rel="icon" type="image/png" href="logoYncrea.png"/>
+	<link rel="icon" type="image/png" href="images/logoYncrea.png"/>
 </head>
 
 <body>
@@ -19,26 +19,25 @@
 	<!-- Contenu du site -->
 
 		<!-- Barre de navigation -->
-		<header>
+		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
-				<img src="logoYncrea.png" id="logoJobsNow" alt="Jobs Now">
+				<img src="images/logoYncrea.png" id="logoJobsNow" alt="Jobs Now">
 			</a>
-			<a href="Page1.JobsNow.html">
-				JobsNow
-			</a>
+			<a href="Page1.JobsNow.html">JobsNow</a>
 			<a href="Page2.Annonces.html">Annonces</a>
 			<a href="Page3.Partenaires.html">Partenaires</a>
-			<a href="Page4.Temoignages.html">Temoignages</a>
-			<a href="Page5.NousContacter.html">Nous Contacter</a>
-			<a style="float:right" href="Page6.SeConnecter.html">Se Connecter</a>
-		</header>
+			<a href="Page4.Temoignages.html">Témoignages</a>
+			<a href="Page5.NousContacter.html">Nous contacter</a>
+			<a style="float:right" href="Page6.SeConnecter.html">Se connecter</a>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+		</div>
 
 		<!-- Footer -->
 		<footer>
-			<a href="FacebookUrl">Facebook</a>
-			<a href="LinkedinUrl">Linkedin</a>
-			<a href="Page5.NousContacter">Nous Contacter</a>
-			<a href="Page7.MentionsLegales.html">MentionsLegales</a>
+			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
+			<a href="LinkedinUrl">LinkedIn</a>
+			<a href="Page5.NousContacter">Nous contacter</a>
+			<a href="Page7.MentionsLegales.html">Mentions légales</a>
 		</footer>
 
 </body>
