--- a/Page6.SeConnecter.html
+++ b/Page6.SeConnecter.html
@@ -61,7 +61,7 @@
 		<footer>
 			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
 			<a href="LinkedinUrl">LinkedIn</a>
-			<a href="Page5.NousContacter">Nous Contacter</a>
+			<a href="Page5.NousContacter.html">Nous Contacter</a>
 			<a href="Page7.MentionsLegales.html">Mentions légales</a>
 		</footer>
 
