Boutons like et postuler

--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -21,7 +21,7 @@
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
-				<img src="images/logoYncrea.png" id="logoJobsNow" alt="Jobs Now">
+				<img src="images/logoYncrea.png" id="logoJobsNow" alt="Jobs Now"/>
 			</a>
 			<a href="Page1.JobsNow.html">JobsNow</a>
 			<a href="Page2.Annonces.html">Annonces</a>
@@ -29,7 +29,6 @@
 			<a href="Page4.Temoignages.html">Témoignages</a>
 			<a href="Page5.NousContacter.html">Nous contacter</a>
 			<a style="float:right" href="Page6.SeConnecter.html">Se connecter</a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
 
 		<!-- Photo équipe JN -->
