--- a/Page2.Annonces.html
+++ b/Page2.Annonces.html
@@ -29,7 +29,6 @@
 			<a href="Page4.Temoignages.html">Témoignages</a>
 			<a href="Page5.NousContacter.html">Nous contacter</a>
 			<a style="float:right" href="Page6.SeConnecter.html">Se connecter</a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
 
 		<!-- Annonces -->
@@ -41,7 +40,11 @@
 				<p>Lieu</p>
 				<p>Tenue</p>
 				<p>Remuneration<p>
-				<p>Description<p>	
+				<p>Description<p>
+				<div class="divBouton">
+					<button>Liker</button>
+					<button>Postuler</button>
+				</div>	
 			</div>
 			<div class="divAnnonce">
 				<h3>Annonce</h3>
@@ -49,7 +52,11 @@
 				<p>Lieu</p>
 				<p>Tenue</p>
 				<p>Remuneration<p>
-				<p>Description<p>	
+				<p>Description<p>
+				<div class="divBouton">
+					<button>Liker</button>
+					<button>Postuler</button>
+				</div>		
 			</div>
 			<div class="divAnnonce">
 				<h3>Annonce</h3>
@@ -57,7 +64,11 @@
 				<p>Lieu</p>
 				<p>Tenue</p>
 				<p>Remuneration<p>
-				<p>Description<p>	
+				<p>Description<p>
+				<div class="divBouton">
+					<button>Liker</button>
+					<button>Postuler</button>
+				</div>		
 			</div>
 			<div class="divAnnonce">
 				<h3>Annonce</h3>
@@ -65,7 +76,11 @@
 				<p>Lieu</p>
 				<p>Tenue</p>
 				<p>Remuneration<p>
-				<p>Description<p>	
+				<p>Description<p>
+				<div class="divBouton">
+					<button>Liker</button>
+					<button>Postuler</button>
+				</div>		
 			</div>
 		</div>
 
