Chagement positionnement Footer (pas dans le projet Maven) + Implémentation servlets

--- a/Page3.Partenaires.html
+++ b/Page3.Partenaires.html
@@ -17,7 +17,7 @@
 	</script>
 
 	<!-- Contenu du site -->
-
+	<div class="ContenuSansFooter">
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 		</div>
-
+	</div>
 		<!-- Footer -->
 		<footer>
 			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
