--- a/Page5.NousContacter.html
+++ b/Page5.NousContacter.html
@@ -17,7 +17,7 @@
 	</script>
 
 	<!-- Contenu du site -->
-
+	<div class="ContenuSansFooter">
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
@@ -47,6 +47,7 @@
 				<input type="submit" name="connexion" placeholder="Se connecter" class="inputButton">
 			</form>
 		</div>
+	</div>
 
 		<!-- Footer -->
 		<footer>
