--- a/Page7.MentionsLegales.html
+++ b/Page7.MentionsLegales.html
@@ -17,7 +17,7 @@
 	</script>
 
 	<!-- Contenu du site -->
-
+	<div class="ContenuSansFooter">
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
@@ -30,7 +30,7 @@
 			<a href="Page5.NousContacter.html">Nous contacter</a>
 			<a style="float:right" href="Page6.SeConnecter.html">Se connecter</a>
 		</div>
-
+	</div>
 		<!-- Footer -->
 		<footer>
 			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
