--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -17,7 +17,7 @@
 	</script>
 
 	<!-- Contenu du site -->
-
+	<div class="ContenuSansFooter">
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
@@ -40,8 +40,8 @@
 		<div id="divPresentationJN">
 			<h1>Présentation de Jobs Now</h1>
 			<p>
-				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
-				Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
+					Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
+					Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
 			</p>
 			<button href="">Télécharger la plaquette</button>
 		</div>
@@ -49,7 +49,7 @@
 		<!-- Présentation de l'équipe -->
 
 		<div id="divEquipe">
-		<h1>L'équipe</h1>
+			<h1>L'équipe</h1>
 			<div id="membresEquipe">
 				<div class="membreEquipe">
 					<img src="images/logoMembre.png" class="logoMembre" alt="Membre">
@@ -77,14 +77,15 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- Footer -->
-		<footer>
-			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
-			<a href="LinkedinUrl">LinkedIn</a>
-			<a href="Page5.NousContacter.html">Nous contacter</a>
-			<a href="Page7.MentionsLegales.html">Mentions légales</a>
-		</footer>
+	<!-- Footer -->
+	<footer>
+		<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
+		<a href="LinkedinUrl">LinkedIn</a>
+		<a href="Page5.NousContacter.html">Nous contacter</a>
+		<a href="Page7.MentionsLegales.html">Mentions légales</a>
+	</footer>
 
 </body>
 </html>
