--- a/Page2.Annonces.html
+++ b/Page2.Annonces.html
@@ -17,7 +17,7 @@
 	</script>
 
 	<!-- Contenu du site -->
-
+	<div class="ContenuSansFooter">
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
@@ -83,6 +83,7 @@
 				</div>		
 			</div>
 		</div>
+	</div>
 
 		<!-- Footer -->
 		<footer>
