--- a/Page6.SeConnecter.html
+++ b/Page6.SeConnecter.html
@@ -17,7 +17,7 @@
 	</script>
 
 	<!-- Contenu du site -->
-
+	<div class="ContenuSansFooter">
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
@@ -55,7 +55,7 @@
 				<input type="submit" name="inscription" placeholder="S'inscrire" class="inputButton">
 			</form>
 		</div>
-
+	</div>
 		<!-- Footer -->
 		<footer>
 			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
