--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -33,7 +33,7 @@
 
 		<!-- Photo équipe JN -->
 		<div id="divPhotoJN">
-			<img src="images/photoEquipe.jpg" id="photoJN" alt="Couverture">
+			<img src="images/couvJN.png" id="photoJN" alt="Couverture">
 		</div>
 
 		<!-- Présentation de Jobs Now -->
