--- a/Page1.JobsNow.html
+++ b/Page1.JobsNow.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<title>JobsNow - Accueil</title>
 	<link rel="stylesheet" href="JobsNow.css">
-	<link rel="icon" type="image/png" href="images/logoYncrea.png"/>
+	<link rel="icon" type="image/png" href="images/logoJN.png"/>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
-				<img src="images/logoYncrea.png" id="logoJobsNow" alt="Jobs Now"/>
+				<img src="images/logoJN.png" id="logoJobsNow" alt="Jobs Now"/>
 			</a>
 			<a href="Page1.JobsNow.html">JobsNow</a>
 			<a href="Page2.Annonces.html">Annonces</a>
@@ -40,8 +40,11 @@
 		<div id="divPresentationJN">
 			<h1>Présentation de Jobs Now</h1>
 			<p>
-					Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
-					Timebantur Amphiarao vitae Marcio referente aurem vatibus conscii conscii in interdum citerioris citerioris imperator conscii inclitis parietes soli referente ministro aut penetrali soli ideoque parietes ideoque timebantur in aut parietes conscii siquid ut uxori aurem uxori postridie conscii citerioris in in ut conscii imperator Amphiarao citerioris quondam nullo disceret postridie ideoque conscii vitae inclitis uxori timebantur susurrasset inclitis disceret soli postridie referente in timebantur in citerioris vitae quondam in susurrasset conscii secreto secreto referente imperator conscii praesente in etiam Amphiarao ideoque interdum uxori uxori aut in velut praesente etiam aurem ut acciderat referente ideoque velut timebantur siquid nullo parietes conscii.
+					JobsNow est une association à but non lucratif destinée aux étudiants du Groupe Yncréa.
+					L’association est déclarée à la préfecture sous le statut de la loi de 1901. Elle est composée d’un bureau de trois membres Président(e), Secrétaire et Trésorier(e), avec trois responsables communication et trois responsables recrutement, issus à parité de chaque école.
+					Sa mission est de développer des partenariats avec des entreprises, de relayer les offres de jobs étudiants HEI ISA et ISEN qu’elles proposent et de présenter, dans les délais impartis, une liste d’étudiants volontaires et adéquats (compétences, comportement, disponibilité notamment).
+					L’association ne prend pas en charge la gestion administrative et sociale des étudiants.
+					La qualité des candidatures présentées et la réactivité de l’association feront le succès de celle-ci.
 			</p>
 			<button href="">Télécharger la plaquette</button>
 		</div>
