--- a/Page4.Temoignages.html
+++ b/Page4.Temoignages.html
@@ -35,8 +35,8 @@
 		<div id="divTemoignages">
 			<h1>Témoignages</h1>
 			<div class="divTemoignage">
-				<div class="photoTemoin">
-					<p>temoin<p>
+				<div class="divImageTemoignage">
+					<img src="images/logoMembre.png" class="imageTemoignage" alt="Membre">
 				</div>
 				<div class="texteTemoignage">
 					<p>Texte du témoignage</p>
