--- a/Page6.SeConnecter.html
+++ b/Page6.SeConnecter.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<title>JobsNow - Connexion</title>
 	<link rel="stylesheet" href="JobsNow.css">
-	<link rel="icon" type="image/png" href="images/logoYncrea.png"/>
+	<link rel="icon" type="image/png" href="images/logoJN.png"/>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav">
 			<a href="Page1.JobsNow.html">
-				<img src="images/logoYncrea.png" id="logoJobsNow" alt="Jobs Now">
+				<img src="images/logoJN.png" id="logoJobsNow" alt="Jobs Now">
 			</a>
 			<a href="Page1.JobsNow.html">JobsNow</a>
 			<a href="Page2.Annonces.html">Annonces</a>
